Added nikos sequence diagrams, robustness diagrams and use cases, removed profile picture

--- a/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
+++ b/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
@@ -328,155 +328,110 @@
 \subsubsection*{Βασική ροή <<Προβολής και επεξεργασίας στοιχείων λογαριασμού \\χρήστη>>:}
 \begin{enumerate}
     \item Ο χρήστης επιλέγει να πάει στη σελίδα του προφίλ. 
-    \item Το σύστημα φορτώνει τα στοιχεία του χρήστη (username, email, περιγραφή, τοποθεσία, κινητό τηλέφωνο και εικόνα χρήστη) και τα εμφανίζει στον χρήστη.
+    \item Το σύστημα φορτώνει τα στοιχεία του χρήστη (username, email, περιγραφή, τοποθεσία και τηλέφωνο) και τα εμφανίζει στον χρήστη.
     \item Ο χρήστης επιλέγει να κάνει επεξεργασία των στοιχείων του και εισάγει νέα στοιχεία για αυτά που θέλει να αλλάξει (εκτός του password και της εικόνας χρήστη που αναλύονται σε εναλλακτική ροή και του email που δεν μπορεί να αλλάξει). 
-    \item Το σύστημα ελέγχει αν τα στοιχεία έχουν τη σωστή μορφοποίηση, δηλαδή το username να έχει εύρος από 8-20 χαρακτήρες και δεν το έχει ήδη άλλος χρήστης, η περιγραφή μέχρι 150 χαρακτήρες, η τοποθεσία να είναι πραγματική και να υπάρχει στο χάρτη και το κινητό να είναι δεκαψήφιος αριθμός και βλέπει ότι οι κανόνες τηρούνται.
+    \item Το σύστημα ελέγχει αν τα στοιχεία έχουν τη σωστή μορφοποίηση, δηλαδή το username να έχει εύρος από 1-20 χαρακτήρες και δεν το έχει ήδη άλλος χρήστης, η περιγραφή να είναι από 1 με 150 χαρακτήρες, η τοποθεσία να είναι από 1 έως 35 χαρακτήρες και το κινητό να είναι δεκαψήφιος αριθμός και βλέπει ότι οι κανόνες τηρούνται.
     \item Το σύστημα καταγράφει τις αλλαγές.
-    \item Το σύστημα ενημερώνει τον χρήστη ότι έχουν ανανεωθεί τα στοιχεία του με μήνυμα και με email.
     \item Το σύστημα επιστρέφει τον χρήστη στην οθόνη του προφίλ του, όπου μπορεί να δει το ανανεωμένο προφίλ του.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 1: Τα νέα στοιχεία που εισάγει ο χρήστης δεν τηρούν τους κανόνες μορφοποίησης:}
-\begin{enumerate}
-    \item [4.α.1.] Το σύστημα ελέγχει τα νέα στοιχεία (username, περιγραφή, τοποθεσία, τηλέφωνο) και δεν τηρούνται οι προδιαγραφές.
-    \item [4.α.2.] Το σύστημα εμφανίζει μήνυμα στον χρήστη ότι τα στοιχεία προς ανανέωση δεν έχουν κατάλληλη μορφοποίηση.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 2: Το νέο username χρησιμοποιείται ήδη από άλλον χρήστη:}
-\begin{enumerate}
-    \item [4.β.1.] Το σύστημα ελέγχει το νέο username και βλέπει ότι υπάρχει ήδη χρήστης με το username αυτό. 
-    \item [4.β.2.] Το σύστημα εμφανίζει μήνυμα στον χρήστη ότι το username χρησιμοποιείται από άλλον χρήστη.  
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 3: Ο χρήστης επιθυμεί αλλαγή του κωδικού:}
+\subsubsection*{Εναλλακτική ροή 1: Ο χρήστης επιθυμεί αλλαγή του κωδικού:}
 \begin{enumerate}
     \item [3.α.1.] Ο χρήστης επιλέγει αλλαγή του κωδικού του. 
-    \item [3.α.2.] Το σύστημα του ζητάει να συμπληρώσει τον παλιό κωδικό του.
-    \item [3.α.3.] Ο χρήστης συμπληρώνει τον παλιό κωδικό και το σύστημα ελέγχει αν είναι σωστός.
-    \item [3.α.4.] Ο κωδικός είναι σωστός και το σύστημα ζητάει τον νέο κωδικό (2 φορές).
-    \item [3.α.5.] Ο χρήστης εισάγει το νέο κωδικό 2 φορές.
-    \item [3.α.6.] Το σύστημα αντιλαμβάνεται ότι ο χρήστης έχει εισάγει τον ίδιο νέο κωδικό και τις δύο φορές.
-    \item [3.α.7.] Το σύστημα ανανεώνει τον κωδικό πρόσβασης του χρήστη.
-    \item [3.α.8.] Το σύστημα ενημερώνει ότι έχει αλλάξει ο κωδικός.
-    \item [3.α.9.] Το σύστημα επιστρέφει στο βήμα 5 της βασικής ροής.
+    \item [3.α.2.] Το σύστημα του ζητάει να συμπληρώσει τον παλιό κωδικό του και τον νέο κωδικό που θέλει δύο φορές (η δεύτερη για επαλήθευση).
+    \item [3.α.3.] Ο χρήστης συμπληρώνει τον παλιό κωδικό και τον νέο κωδικό του δύο φορές.
+    \item [3.α.4.] Το σύστημα ελέγχει αν ο παλιός κωδικός είναι σωστός και ότι οι δύο νέοι κωδικοί είναι ίδιο και βλέπει ότι αυτό ισχύει.
+    \item [3.α.5.] Το σύστημα ανανεώνει τον κωδικό πρόσβασης του χρήστη.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 4: Ο παλιός κωδικός κατά την αλλαγή κωδικού δεν είναι σωστός:}
+\subsubsection*{Εναλλακτική ροή 2: Ο παλιός κωδικός κατά την αλλαγή κωδικού δεν είναι σωστός ή οι δύο νέοι κωδικοί δεν είναι ίδιοι:}
 \begin{enumerate}
     \item [3.β.1.] Ο χρήστης επιλέγει αλλαγή του κωδικού του.
-    \item [3.β.2.] Το σύστημα του ζητάει να συμπληρώσει τον παλιό κωδικό του.
-    \item [3.β.3.] Ο χρήστης συμπληρώνει τον παλιό κωδικό και το σύστημα ελέγχει αν είναι σωστός.
-
-    \item [3.β.4.] Το σύστημα καταλαβαίνει ότι ο παλιός κωδικός που εισήγαγε ο χρήστης είναι λανθασμένος.
-    \item [3.β.5.] Το σύστημα ενημερώνει τον χρήστη ότι ο παλιός κωδικός είναι λανθασμένος.
+    \item [3.β.2.] Το σύστημα του ζητάει να συμπληρώσει τον παλιό κωδικό του και τον νέο κωδικό που θέλει δύο φορές (η δεύτερη για επαλήθευση).
+    \item [3.β.3.] Ο χρήστης συμπληρώνει τον παλιό κωδικό και τον νέο κωδικό του δύο φορές.
+    \item [3.β.4.] Το σύστημα ελέγχει αν ο παλιός κωδικός είναι σωστός και ότι οι δύο νέοι κωδικοί είναι ίδιο και βλέπει ότι αυτό δεν ισχύει.
+    \item [3.β.5.] Το σύστημα εμφανίζει μήνυμα σφάλματος στο χρήστη.  
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 5: Οι νέοι κωδικοί που εισήγαγε ο χρήστης δεν είναι ίδιοι:}
+\subsubsection*{Εναλλακτική ροή 3: Τα νέα στοιχεία που εισάγει ο χρήστης δεν τηρούν τους κανόνες μορφοποίησης:}
 \begin{enumerate}
-    \item [3.γ.1.] Ο χρήστης επιλέγει αλλαγή του κωδικού του. 
-    \item [3.γ.2.] Το σύστημα του ζητάει να συμπληρώσει τον παλιό κωδικό του.
-    \item [3.γ.3.] Ο χρήστης συμπληρώνει τον παλιό κωδικό και το σύστημα ελέγχει αν είναι σωστός.
-    \item [3.γ.4.] Ο κωδικός είναι σωστός και το σύστημα ζητάει τον νέο κωδικό (2 φορές).
-    \item [3.γ.5.] Ο χρήστης εισάγει το νέο κωδικό 2 φορές.
-    \item [3.γ.6.] Το σύστημα καταλαβαίνει ότι οι δύο νέοι κωδικοί που εισήγαγε ο χρήστης είναι διαφορετικοί.
-    \item [3.γ.7.] Το σύστημα ενημερώνει τον χρήστη ότι οι δύο νέοι κωδικοί είναι διαφορετικοί.
+    \item [4.α.1.] Το σύστημα ελέγχει τα νέα στοιχεία (username, περιγραφή, τοποθεσία, τηλέφωνο) και δεν τηρούνται οι προδιαγραφές.
+    \item [4.α.2.] Το σύστημα εμφανίζει μήνυμα σφάλματος στο χρήστη.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 6: Ο χρήστης επιθυμεί να αλλάξει την εικόνα προφίλ του:}
+\subsubsection*{Εναλλακτική ροή 4: Το νέο username χρησιμοποιείται ήδη από άλλον χρήστη:}
 \begin{enumerate}
-    \item [3.δ.1.] Ο χρήστης επιλέγει αλλαγή την εικόνα προφίλ του.
-    \item [3.δ.2.] Το σύστημα του ζητάει να ανεβάσει την νέα εικόνα.
-    \item [3.δ.3.] Ο χρήστης ανεβάζει την εικόνα
-    \item [3.δ.4.] Το σύστημα ελέγχει αν το αρχείο είναι τύπου εικόνας και ότι έχει ανάλυση μικρότερη από 1000x1000 και βλέπει ότι οι κανόνες ισχύουν.
-    \item [3.δ.5.] Το σύστημα καταγράφει την αλλαγή της εικόνας του χρήστη.
-    \item [3.δ.6.] Το σύστημα ενημερώνει τον χρήστη ότι έχει αλλάξει η εικόνα χρήστη.
-    \item [3.δ.7.] Το σύστημα επιστρέφει στο βήμα 7 της βασικής ροής.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 7: Το αρχείο εικόνας δεν πληρεί τις προδιαγραφές:}
-\begin{enumerate}
-    \item [3.ε.1.] Ο χρήστης επιλέγει αλλαγή την εικόνα προφίλ του.
-    \item [3.ε.2.] Το σύστημα του ζητάει να ανεβάσει την νέα εικόνα.
-    \item [3.ε.3.] Ο χρήστης ανεβάζει την εικόνα
-    \item [3.ε.4.] Το σύστημα ελέγχει αν το αρχείο είναι τύπου εικόνας και ότι έχει ανάλυση μικρότερη από 1000x1000 και βλέπει ότι οι κανόνες δεν ισχύουν.
-    \item [3.ε.5.] Το σύστημα ενημερώνει τον χρήστη ότι η εικόνα που ανέβασε δεν έχει σωστή μορφή αρχείου ή ότι η ανάλυση είναι μεγαλύτερη από το όριο των 1000x1000.
+    \item [4.β.1.] Το σύστημα ελέγχει το νέο username και βλέπει ότι υπάρχει ήδη χρήστης με το username αυτό. 
+    \item [4.β.2.] Το σύστημα εμφανίζει μήνυμα σφάλματος στο χρήστη.  
 \end{enumerate}
 
 \subsection{Επεξεργασία χρηματικού υπολοίπου χρήστη}
 
-\textbf{Σημείωση:} Στο παρακάτω use case, ορισμένα βήματα αναφέρονται πληρωμή μέσω πιστωτικής / χρεωστικής κάρτας. Στις περιπτώσεις αυτές, με σκοπό την διεκπεραίωση της εργασίας, έχουμε κάνει την παραδοχή ότι για να επιβεβαιωθεί η πληρωμή θα ελέγχονται απλώς τα στοιχεία της κάρτας ώστε να έχουν σωστή μορφοποίηση, καθώς η δημιουργία ενός ολοκληρωμένου συστήματος χειρισμού ηλεκτρονικών πληρωμών είναι εκτός του scope της άσκησης.
+\textbf{Σημείωση:} Στο παρακάτω use case, επειδή δεν μπορούμε να δημιουργήσουμε πραγματικό σύστημα πληρωμών για την εργασία, με πραγματικό payment processor, αποφασίσαμε να σχεδιάζουμε για τη συγκεκριμένη άσκηση ένα σύστημα όπου ο χρήστης επιλέγει αυθαίρετα το ποσό που θέλει να προσθέσει ή να αφαιρέσει, και το σύστημα θα ελέγχει απλά αν το ποσό είναι έγκυρο (πχ έχει αρκετά χρήματα στο λογαριασμό ο χρήστης για να αφαιρέσει) και θα καταγράφει την αλλαγή στο χρηματικό υπόλοιπο.
+
 
 \subsubsection*{Βασική ροή <<Επεξεργασίας χρηματικού υπολοίπου χρήστη>>: Προσθήκη χρημάτων:}
 \begin{enumerate}
-    \item Ο χρήστης επιλέγει να δει και να επεξεργαστεί το χρηματικό του υπόλοιπο. 
-    \item Το σύστημα του εμφανίζει το υπόλοιπό του μαζί με επιλογές για να προσθέσει χρήματα και να αφαιρέσει χρήματα.
-    \item Ο χρήστης επιλέγει προσθήκη χρημάτων.
-    \item Το σύστημα ζητάει από τον χρήστη να εισάγει το ποσό που θέλει να προσθέσει και τα στοιχεία της πιστωτικής/χρεωστικής κάρτας του (αριθμός δεκαέξι ψηφίων, όνομα κατόχου, μήνας λήξης και CVV τριών ψηφίων.), με σκοπό να γίνει η online πληρωμή.
-    \item Ο χρήστης εισάγει τα στοιχεία της κάρτας του και το ποσό.
-    \item Το σύστημα ελέγχει αν τα στοιχεία της κάρτας (δηλαδή ότι ο αριθμός αποτελείται από δεκαέξι ψηφία, το όνομα έχει κατάλληλη μορφοποίηση, το CVV είναι τριών ψηφίων και η ημερομηνία λήξης είναι έγκυρη) και βλέπει ότι είναι έγκυρα.
-    \item H πληρωμή κατοχυρώνεται από το σύστημα και το υπόλοιπο του χρήστη ανανεώνεται με βάση το ποσό.
-    \item Το σύστημα ενημερώνει το χρήστη για την επιτυχή ανανέωση του υπολοίπου με μήνυμα και με email.
+    \item Ο χρήστης επιλέγει να δει το χρηματικό του υπόλοιπο πηγαίνοντας στη σελίδα προφίλ.
+    \item Το σύστημα εμφανίζει στον χρήστη το προφίλ του μαζί με το χρηματικό υπόλοιπό του και επιλογή επεξεργασίας του.
+    \item Ο χρήστης επιλέγει να επεξεργαστεί το χρηματικό υπόλοιπό του.
+    \item Το σύστημα εμφανίζει 2 επιλογές στο χρήστη, προσθήκη ή αφαίρεση χρημάτων, ώστε να συμπληρώσει όποια θέλει.
+    \item Ο χρήστης επιλέγει προσθήκη χρημάτων, συμπληρώνοντας το αντίστοιχο ποσό που θέλει να προσθέσει.
+    \item Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0), το οποίο ισχύει.
+    \item Το σύστημα προσθέτει τα λεφτά στο χρηματικό υπόλοιπο του χρήστη και τον επιστρέφει στη σελίδα προφίλ.
+    \item Το νέο υπόλοιπο φαίνεται πλέον στην σελίδα του προφίλ του χρήστη.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 1: Τα στοιχεία της κάρτας δεν είναι έγκυρα:}
+\subsubsection*{Εναλλακτική ροή 1: Επιλογή αφαίρεσης χρημάτων από τον λογαριασμό - Έγκυρο ποσό:}
 \begin{enumerate}
-    \item [6.1.] Το σύστημα ελέγχει αν τα στοιχεία της κάρτας (δηλαδή ότι ο αριθμός αποτελείται από δεκαέξι ψηφία, το όνομα έχει κατάλληλη μορφοποίηση, το CVV είναι τριών ψηφίων και η ημερομηνία λήξης είναι έγκυρη) και βλέπει ότι δεν είναι έγκυρα.
-    \item [6.2.] Το σύστημα ενημερώνει τον χρήστη για την αστοχία.
+    \item [5.α.1.] Ο χρήστης επιλέγει αφαίρεση χρημάτων, συμπληρώνοντας το αντίστοιχο ποσό που θέλει να αφαιρέσει.
+    \item [5.α.2.] Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0) καθώς και ότι υπάρχει αρκετά μεγάλο υπόλοιπο στο λογαριασμό για να γίνει η αφαίρεση, το οποίο ισχύει.
+    \item [5.α.3.] Το σύστημα αφαιρεί τα λεφτά στο χρηματικό υπόλοιπο του χρήστη και τον επιστρέφει στη σελίδα προφίλ.
+    \item [5.α.4.] Το νέο υπόλοιπο φαίνεται πλέον στην σελίδα του προφίλ του χρήστη.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 2: Επιλογή αφαίρεσης χρημάτων από τον λογαριασμό:}
+\subsubsection*{Εναλλακτική ροή 2: Επιλογή αφαίρεσης χρημάτων από τον λογαριασμό - Μη έγκυρο ποσό:}
 \begin{enumerate}
-    \item [3.α.1.] Ο χρήστης επιλέγει επιστροφή χρημάτων.
-    \item [3.α.2.] Το σύστημα ζητάει από τον χρήστη να εισάγει το ποσό που θέλει να αφαιρέσει και τα στοιχεία της πιστωτικής/χρεωστικής κάρτας του (αριθμός δεκαέξι ψηφίων, όνομα κατόχου, μήνας λήξης και CVV τριών ψηφίων.), με σκοπό να γίνει η online επιστροφή χρημάτων.
-    \item [3.α.3.] Ο χρήστης εισάγει τα στοιχεία της κάρτας του και το ποσό.
-    \item [3.α.4.] Το σύστημα ελέγχει αν τα στοιχεία της κάρτας (δηλαδή ότι ο αριθμός αποτελείται από δεκαέξι ψηφία, το όνομα έχει κατάλληλη μορφοποίηση, το CVV είναι τριών ψηφίων και η ημερομηνία λήξης είναι έγκυρη) και βλέπει ότι είναι έγκυρα.
-    \item [3.α.5.] Το σύστημα ελέγχει αν το ποσό που εισήγαγε υπερβαίνει το υπόλοιπό του και βλέπει ότι αυτό δεν ισχύει. 
-    \item [3.α.6.] Η επιστροφή κατοχυρώνεται και αφαιρείται το ποσό από τον λογαριασμό του χρήστη.
-    \item [3.α.7.] Το σύστημα ενημερώνει τον χρήστη ότι η μεταφορά έγινε με επιτυχία με μήνυμα και με email.
+    \item [5.β.1.] Ο χρήστης επιλέγει αφαίρεση χρημάτων, συμπληρώνοντας το αντίστοιχο ποσό που θέλει να αφαιρέσει.
+    \item [5.β.2.] Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0) καθώς και ότι υπάρχει αρκετά μεγάλο υπόλοιπο στο λογαριασμό για να γίνει η αφαίρεση, το οποίο δεν ισχύει.
+    \item [5.β.3.] Το σύστημα εμφανίζει μήνυμα σφάλματος.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 3: Ο χρήστης δεν έχει το ποσό στο λογαριασμό του που θέλει να αφαιρέσει:}
+\subsubsection*{Εναλλακτική ροή 3: Η μορφοποίηση της εισόδου του χρήστη είναι μη έγκυρη:}
 \begin{enumerate}
-    \item [3.β.1.] Ο χρήστης επιλέγει επιστροφή χρημάτων.
-    \item [3.β.2.] Το σύστημα ζητάει από τον χρήστη να εισάγει το ποσό που θέλει να αφαιρέσει και τα στοιχεία της πιστωτικής/χρεωστικής κάρτας του (αριθμός δεκαέξι ψηφίων, όνομα κατόχου, μήνας λήξης και CVV τριών ψηφίων.), με σκοπό να γίνει η online επιστροφή χρημάτων.
-    \item [3.β.3.] Ο χρήστης εισάγει τα στοιχεία της κάρτας του και το ποσό.
-    \item [3.β.4.] Το σύστημα ελέγχει αν τα στοιχεία της κάρτας (δηλαδή ότι ο αριθμός αποτελείται από δεκαέξι ψηφία, το όνομα έχει κατάλληλη μορφοποίηση, το CVV είναι τριών ψηφίων και η ημερομηνία λήξης είναι έγκυρη) και βλέπει ότι είναι έγκυρα.
-    \item [3.β.5.] Το σύστημα ελέγχει αν το ποσό που εισήγαγε υπερβαίνει το υπόλοιπό του και βλέπει ότι αυτό ισχύει. 
-    \item [3.β.6.] Το σύστημα ενημερώνει τον χρήστη ότι δεν έχει τόσα λεφτά στον λογαριασμό του.
+    \item [6.1.] Το σύστημα ελέγχει αν η μορφοποίηση της εισόδου του χρήστη είναι έγκυρη (ποσό μεγαλύτερο του 0), το οποίο δεν ισχύει.
+    \item [6.2.] Το σύστημα εμφανίζει μήνυμα σφάλματος.
 \end{enumerate}
 
 \subsection{Επεξεργασία λίστας αγαπημένων και χρήση \\συστήματος ειδοποιήσεων}
 
 \subsubsection*{Βασική ροή <<Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων>>: Προσθήκη στην λίστα αγαπημένων και προβολή ειδοποίησης:}
 \begin{enumerate}
-    \item Ο χρήστης προβάλλει το προφίλ ενός χρήστη (από την αναζήτηση χρήστη ή από προηγούμενη συναλλαγή) και επιλέγει να τον προσθέσει στη λίστα των αγαπημένων του.
-    \item Το σύστημα ελέγχει αν υπάρχει ήδη προσθεμένος στην λίστα αγαπημένων ο χρήστης με αυτό το email.
-    \item To σύστημα βλέπει ότι δεν είναι προσθεμένος αυτός ο χρήστης και τον προσθέτει στη λίστα αγαπημένων.
-    \item Ο χρήστης επιλέγει εμφάνιση λίστας αγαπημένων, και βλέπει ότι έχει προστεθεί το όνομα που επέλεξε.
-    \item Ο χρήστης που προστέθηκε στη λίστα αγαπημένων προσθέτει ένα βιβλίο στην πλατφόρμα προς ενοικίαση ή κάνει μια νέα αίτηση.
-    \item Η πλατφόρμα το αντιλαμβάνεται και προσθέτει μια νέα ειδοποίηση στην οθόνη ειδοποιήσεων του αρχικού χρήστη.
-    \item Ο αρχικός χρήστης προβάλλει τις ειδοποιήσεις του και βλέπει την νέα ειδοποίηση που προστέθηκε.
-    \item Ο χρήστης επιλέγει ένα βιβλίο που βλέπει στη λίστα ειδοποιήσεων, το οποίο ανάρτησε ένας αγαπημένος χρήστης του προς ενοικίαση.
-    \item Το σύστημα μεταβιβάζει τον χρήστη αυτόματα στην σελίδα που αυτός μπορεί να νοικιάσει το βιβλίο.
+    \item Ο χρήστης προβάλλει το προφίλ ενός χρήστη (από την αναζήτηση χρήστη) και επιλέγει να τον προσθέσει στη λίστα των αγαπημένων του.
+    \item Το σύστημα ελέγχει αν υπάρχει ήδη προσθεμένος ο χρήστης στην λίστα αγαπημένων και βλέπει ότι αυτό δεν ισχύει.
+    \item To σύστημα προσθέτει τον χρήστη που επιλέχθηκε στη λίστα αγαπημένων του αρχικού χρήστη.
+    \item Ο χρήστης που προστέθηκε στη λίστα αγαπημένων προσθέτει ένα βιβλίο στην πλατφόρμα προς ενοικίαση ή κάνει μια νέα αίτηση (μέσω άλλων use cases, αναφέρουμε αυτό το βήμα και το επόμενο μόνο για λόγους πιο εύκολης κατανόησης της αλληλουχίας ενεργειών).
+    \item Η πλατφόρμα το αντιλαμβάνεται και προσθέτει μια νέα ειδοποίηση στην οθόνη ειδοποιήσεων του αρχικού χρήστη. (Μέσω των ίδιων άλλων use cases)
+    \item Ο αρχικός χρήστης επιλέγει να προβάλλει τις ειδοποιήσεις.
+    \item Το σύστημα μεταφέρει τον χρήστη στη σελίδα ειδοποιήσεών του.
+    \item Ο χρήστης βλέπει τη νέα ειδοποίηση που προστέθηκε και αποφασίζει να την αφαιρέσει από τη λίστα ειδοποιήσεών του.
+    \item Το σύστημα αφαιρεί την ειδοποίηση από τη λίστα ειδοποιήσεων του χρήστη.
+    \item Το σύστημα εμφανίζει ανανεωμένη τη λίστα ειδοποιήσεων στο χρήστη.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 1: Ήδη προσθεμένος χρήστης:}
 \begin{enumerate}
-    \item [3.1.] Ο χρήστης πατάει κλικ σε ένα username για να το προσθέσει στη λίστα αγαπημένων. Το σύστημα ψάχνει τη βάση για να δει αν αυτός ο χρήστης είναι ήδη προσθεμένος.
-    \item [3.2.] Ο χρήστης είναι ήδη προσθεμένος και το σύστημα δεν κάνει καμία ενέργεια.
+    \item [2.1.] Το σύστημα ελέγχει αν υπάρχει ήδη προσθεμένος ο χρήστης στην λίστα αγαπημένων και βλέπει ότι αυτό ισχύει.
+    \item [3.2.] Η ροή συνεχίζει από το βήμα 4 της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 2: Διαγραφή χρήστη:}
+\subsubsection*{Εναλλακτική ροή 2: Διαγραφή χρήστη από τη λίστα αγαπημένων:}
 \begin{enumerate}
-    \item [4.1.] Ο χρήστης επιλέγει να δει την λίστα αγαπημένων, και επιλέγει να αφαιρέσει έναν χρήστη από την λίστα των αγαπημένων του.
-    \item [4.2.] Το σύστημα αφαιρεί τον χρήστη αυτόν από τη λίστα αγαπημένων του αρχικού χρήστη
-    \item [4.3.] Το σύστημα ενημερώνει αντίστοιχα τον αρχικό χρήστη.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 3: Επιλογή αίτησης από τη λίστα ειδοποιήσεων:}
-\begin{enumerate}
-    \item [8.1.] Ο χρήστης επιλέγει ένα βιβλίο που βλέπει στη λίστα ειδοποιήσεων, το οποίο ζητάει ένας αγαπημένος χρήστης του με τη μορφή αίτησης.
-    \item [8.2.] Το σύστημα μεταβιβάζει τον χρήστη αυτόματα στην σελίδα που αυτός μπορεί να εκπληρώσει την αίτηση αυτή.
+    \item [4.1.] Ο αρχικός χρήστης επιλέγει να δει την λίστα αγαπημένων του.
+    \item [4.2.] Το σύστημα μεταφέρει τον χρήστη στη σελίδα αγαπημένων του.
+    \item [4.3.] Ο χρήστης επιλέγει να αφαιρέσει ένα χρήστη από τη λίστα των αγαπημένων του.
+    \item [4.2.] Το σύστημα αφαιρεί τον χρήστη αυτόν από τη λίστα αγαπημένων του αρχικού χρήστη.
+    \item [4.3.] Το σύστημα εμφανίζει ανανεωμένη τη λίστα αγαπημένων στον αρχικό χρήστη.
 \end{enumerate}
 
 \subsection{Προβολή ιστορικού συναλλαγών και στατιστικών}
