Added notification making to add book offer diagrams and use case

--- a/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
+++ b/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
@@ -230,6 +230,7 @@
     \item Ο χρήστης επιλέγει να προσθέσει ένα νέο βιβλίο προς ενοικίαση από τους υπόλοιπους χρήστες.
     \item Ο χρήστης συμπληρώνει τα στοιχεία του βιβλίου (τίτλος, συγγραφέας, εκδοτικός οίκος και χρονολογία τύπωσης, κατηγορίες στις οποίες ανήκει το βιβλίο, τρόπος παράδοσης, τιμή, ποσότητα ίδιων βιβλίων) και ολοκληρώνει την προσθήκη.
     \item Το σύστημα καταγράφει τα στοιχεία του βιβλίου και ολοκληρώνει την προσθήκη.
+    \item Το σύστημα δημιουργεί ειδοποιήσεις για όλους τους χρήστες που έχουν τον χρήστη που πρόσθεσε τη προσφορά βιβλίου ως αγαπημένο.
     \item Το σύστημα φορτώνει ξανά τη σελίδα όπου φαίνεται η προσθήκη.
 \end{enumerate}
 
