Added comments for robustness and sequence for Nikos and Peris work

--- a/Reports/Robustness-Diagrams/v1.0/Files/Robustness-diagrams-v1.0.tex
+++ b/Reports/Robustness-Diagrams/v1.0/Files/Robustness-diagrams-v1.0.tex
@@ -94,6 +94,8 @@
 	\label{Robustness Diagram: Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
 \end{figure}
 
+Εδώ τα boundary objects "Βιβλία προς ενοικίαση", "Βιβλία προς ενοικίαση: Κενή οθόνη", "Βιβλία προς ενοικίαση: Φόρμα προσθήκης καταχώρησης", "Βιβλία προς ενοικίαση: Φόρμα αλλαγής τιμής και τύπου συναλλαγής" και "Βιβλία προς ενοικίαση: Ανανεωμένη σελίδα με τις αλλαγές" αναφέρονται όλες σε διαφορετικά μέρη ή σε διαφορετικές στιγμές της ίδιας σελίδας, οπότε τα μεταφέρουμε σαν μια κλάση στο sequence diagram, στο class diagram και στον κώδικα.
+
 \subsection{Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{Manage User Requests Robustness.png}
@@ -117,12 +119,16 @@
 	\label{Robustness Diagram: Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη}
 \end{figure}
 
+Εδώ τα boundary objects "Οθόνη Προφίλ: Στοιχεία με δυνατότητα επεξεργασίας", "Οθόνη Προφίλ: Πεδία επεξεργασίας στοιχείων", "Οθόνη Προφίλ: Πεδίο παλιού κωδικού", "Οθόνη Προφίλ: Πεδία νέου κωδικού", "Οθόνη Προφίλ: Pop-up σφάλματος" και "Οθόνη Προφίλ: Εμφάνιση ανανεωμένων στοιχείων" αναφέρονται όλες σε διαφορετικά μέρη ή σε διαφορετικές στιγμές της ίδιας σελίδας, οπότε τα μεταφέρουμε σαν μια κλάση στο sequence diagram, στο class diagram και στον κώδικα.
+
 \subsection{Επεξεργασία χρηματικού υπολοίπου χρήστη}
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{Edit User Balance Robustness.png}
 	\caption{Robustness Diagram: Επεξεργασία χρηματικού υπολοίπου χρήστη}
 	\label{Robustness Diagram: Επεξεργασία χρηματικού υπολοίπου χρήστη}
 \end{figure}
+
+Εδώ τα boundary objects "Σελίδα Προφίλ: Στοιχεία χρήστη μαζί με διαθέσιμο υπόλοιπο και δυνατότητα προσθήκης και αφαίρεσης", "Σελίδα Προφίλ: Επιλογή προσθήκης με πεδίο ποσού", "Σελίδα Προφίλ: Επιλογή αφαίρεσης με πεδίο ποσού", "Σελίδα Προφίλ: Pop-up λάθους" και "Σελίδα Προφίλ: Ανανεωμένο υπόλοιπο" αναφέρονται όλες σε διαφορετικά μέρη ή σε διαφορετικές στιγμές της ίδιας σελίδας, οπότε τα μεταφέρουμε σαν μια κλάση στο sequence diagram, στο class diagram και στον κώδικα.
 
 \subsection{Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων}
 \begin{figure}[H]
@@ -137,6 +143,8 @@
 	\caption{Robustness Diagram: Προβολή ιστορικού συναλλαγών και στατιστικών}
 	\label{Robustness Diagram: Προβολή ιστορικού συναλλαγών και στατιστικών}
 \end{figure}
+
+Εδώ τα boundary objects "Ιστορικό ολοκληρωμένων συναλλαγών: Κενή σελίδα", "Ιστορικό ολοκληρωμένων συναλλαγών: Λίστα συναλλαγών", "Ιστορικό ολοκληρωμένων συναλλαγών: Στατιστικά κατηγοριών", "Ιστορικό ολοκληρωμένων συναλλαγών: Στατιστικά ηλικιών" και "Ιστορικό ολοκληρωμένων συναλλαγών: Κουμπιά αξιολόγησης" αναφέρονται όλες σε διαφορετικά μέρη ή σε διαφορετικές στιγμές της ίδιας σελίδας, οπότε τα μεταφέρουμε σαν μια κλάση στο sequence diagram, στο class diagram και στον κώδικα.
 
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
 \begin{enumerate}
