Added Xristos use cases and robustness corrections

--- a/Reports/Project-Code/v1.0/Files/Project-code-v1.0.tex
+++ b/Reports/Project-Code/v1.0/Files/Project-code-v1.0.tex
@@ -71,7 +71,7 @@
 
 \section{Τι Περιλαμβάνει η Έκδοση v1.0}
 
-Η έκδοση v1.0 του Project-code περιλαμβάνει όλο το κώδικα με όλη τη λειτουργικότητα από όλα τα use cases που σχεδιάσαμε. Η μόνη λειτουργικότητα που λείπει είναι η προβολή της εικόνας χρήστη και η εναλλακτική ροή της αλλαγής εικόνας χρήστη. Screenshots του κώδικα περιέχονται επίσης στο τεχνικό κείμενο Project-description-v1.0.pdf, όπως μας ζητείται.
+Η έκδοση v1.0 του Project-code περιλαμβάνει όλο το κώδικα με όλη τη λειτουργικότητα από όλα τα use cases που σχεδιάσαμε. Screenshots του κώδικα περιέχονται επίσης στο τεχνικό κείμενο Project-description-v1.0.pdf, όπως μας ζητείται.
 
 \section{Σημειώσεις Σχετικές με τον Κώδικα}
 \label{Notes}
