--- a/Reports/Robustness-Diagrams/v1.0/Files/Robustness-diagrams-v1.0.tex
+++ b/Reports/Robustness-Diagrams/v1.0/Files/Robustness-diagrams-v1.0.tex
@@ -103,6 +103,8 @@
 	\label{Robustness Diagram: Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
 \end{figure}
 
+Εδώ τα boundary objects "Λίστα αιτημάτων", "Λίστα αιτημάτων: Στοιχεία αίτησης" και "Λίστα αιτημάτων: πλατφόρμα εισαγωγής στοιχείων" αναφέρονται όλες σε διαφορετικά μέρη ή σε διαφορετικές στιγμές της ίδιας σελίδας, οπότε τα μεταφέρουμε σαν μια κλάση στο sequence diagram, στο class diagram και στον κώδικα.
+
 \subsection{Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{Review after Transaction Robustness.png}
@@ -110,6 +112,7 @@
 	\label{Robustness Diagram: Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
 \end{figure}
 
+Εδώ τα boundary objects "Σελίδα Αξιολόγησης", "Σελίδα Αξιολόγησης: Πεδίο αστεριών" και "Σελίδα Αξιολόγησης: Πεδίο αστεριών και κειμένου" αναφέρονται όλες σε διαφορετικά μέρη ή σε διαφορετικές στιγμές της ίδιας σελίδας, οπότε τα μεταφέρουμε σαν μια κλάση στο sequence diagram, στο class diagram και στον κώδικα.
 
 \subsection{Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη}
 \textbf{Σημείωση:} Στο διάγραμμα αυτό τα δύο boundary objects "Οθόνη Προφίλ με Δυνατότητα Επεξεργασίας" και "Οθόνη προφίλ με ανανεωμένα στοιχεία" αναφέρονται στην ίδια οθόνη, πριν και μετά την αλλαγή αντίστοιχα. Ο λόγος που τα βάλαμε ξεχωριστά είναι για να φαίνεται η αλληλουχία των πράξεων.
