--- a/Reports/Team-Plan/v1.0/Files/Team-plan-v1.0.tex
+++ b/Reports/Team-Plan/v1.0/Files/Team-plan-v1.0.tex
@@ -138,10 +138,10 @@
 \subsection{Κατανομή Προσπάθειας της Ομάδας}
 
 \begin{itemize}
-    \item \textbf{Γρηγόρης Καπαδούκας:} Ε\textsubscript{1} = 
-	\item \textbf{Χρήστος Μπεστητζάνος:} Ε\textsubscript{2} = 
-	\item \textbf{Νικόλαος Αυγέρης:} Ε\textsubscript{3} =  
-	\item \textbf{Περικλής Κοροντζής:} Ε\textsubscript{4} =  
+    \item \textbf{Γρηγόρης Καπαδούκας:} Ε\textsubscript{1} = 0.3
+	\item \textbf{Χρήστος Μπεστητζάνος:} Ε\textsubscript{2} = 0.26
+	\item \textbf{Νικόλαος Αυγέρης:} Ε\textsubscript{3} = 0.22
+	\item \textbf{Περικλής Κοροντζής:} Ε\textsubscript{4} = 0.22
 \end{itemize}
 
 \subsection{Τελικό Gantt Chart και Ανάθεση Έργου}
