--- a/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
+++ b/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
@@ -261,46 +261,29 @@
 \subsubsection*{Βασική ροή <<Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης>>: Προσθήκη νέου αιτήματος:}
 \begin{enumerate}
     \item Ο χρήστης επιλέγει να δει τη λίστα με τα αιτήματά του. 
-    \item Το σύστημα ψάχνει αν υπάρχουν αιτήματα και αν υπάρχουν εμφανίζει οθόνη με τα ήδη υπάρχοντα αιτήματά του μαζί με στοιχεία του καθενός από αυτά. 
+    \item Το σύστημα ψάχνει αν υπάρχουν αιτήματα και αν υπάρχουν εμφανίζει οθόνη με τα ήδη υπάρχοντα αιτήματά του (αν αυτά υπάρχουν) μαζί με στοιχεία του καθενός από αυτά. 
     \item Ο χρήστης επιλέγει να προσθέσει καινούριο αίτημα.
-    \item Ο χρήστης εισάγει τα στοιχεία του βιβλίου τα οποία θέλει να αποκτήσει, προσθέτοντας την τιμή που προτίθεται να πληρώσει. 
-    \item Το σύστημα αναζητά αν αυτό το βιβλίο υπάρχει ήδη διαθέσιμο από κάποιον άλλο χρήστη που το προσφέρει ήδη στην πλατφόρμα. 
+    \item Ο χρήστης εισάγει τα στοιχεία του βιβλίου τα οποία θέλει να αποκτήσει, προσθέτοντας την τιμή που προτίθεται να πληρώσει και τον τρόπο παράδοσης. 
     \item Το σύστημα προχωράει στην καταχώρηση του αιτήματος. 
-    \item Το σύστημα τον ενημερώνει για την επιτυχή καταχώρηση του αιτήματος. 
-    \item Ο χρήστης κλείνει το αίτημα
-    \item Εμφανίζεται η λίστα των αιτημάτων ανανεωμένη με το νέο αίτημα.
+    \item Το σύστημα δημιουργεί ειδοποιήσεις για όλους τους χρήστες που έχουν τον χρήστη που πρόσθεσε την αίτηση στη λίστα αγαπημένων τους. 
+    \item Εμφανίζεται η λίστα των αιτημάτων ανανεωμένη με τα νέα δεδομένα.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 1: Ο χρήστης δεν έχει κάνει προηγούμενες αιτήσεις:}
-\begin{enumerate}
-    \item[2.1.] Το σύστημα αντιλαμβάνεται ότι o χρήστης δεν έχει κάνει καμία προηγούμενη αίτηση, οπότε εμφανίζεται μια άδεια οθόνη με μοναδική λειτουργία την προσθήκη αίτησης.
-    \item[2.2.] Η ροή συνεχίζεται από το βήμα 3 της βασικής ροής.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης αφαιρεί υπάρχουσα αίτηση:}
+\subsubsection*{Εναλλακτική ροή 1: Ο χρήστης αφαιρεί υπάρχουσα αίτηση:}
 \begin{enumerate}
     \item[3.α.1] Ο χρήστης επιλέγει να διαγράψει μια αίτηση του.
-    \item[3.α.2] Το σύστημα τον καλεί να επιβεβαιώσει την επιλογή του. 
-    \item[3.α.3] Ο χρήστης επιβεβαιώνει.
-    \item[3.α.4] Το σύστημα διαγράφει το request.
-    \item[3.α.5] Εμφανίζεται πάλι η οθόνη των requests.
+    \item[3.α.2] Το σύστημα διαγράφει το request.
+    \item[3.α.3] Συνεχίζεται η ροή από το βήμα 7 της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 3: Ο χρήστης κάνει edit υπάρχουσα αίτηση:}
+\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης τροποποιεί μια υπάρχουσα αίτηση:}
 \begin{enumerate}
     \item[3.β.1] Ο χρήστης επιλέγει να επεξεργαστεί κάποια υπάρχουσα αίτηση. 
-    \item[3.β.2] Το σύστημα εμφανίζει μια καινούργια οθόνη με τα στοιχεία της αίτησης που επέλεξε. 
-    \item[3.β.3] Ο χρήστης επιλέγει το στοιχείο που θέλει να αλλάξει και συμπληρώνει την καινούργια τιμή. 
-    \item[3.β.4] Επιβεβαιώνει την επιλογή του.
-    \item[3.β.5] Το σύστημα επιστρέφει το χρήστη στην οθόνη με τα στοιχεία. 
-    \item[3.β.6] Ο χρήστης οριστικοποιεί.
-    \item[3.β.7] Το σύστημα επιστρέφει την οθόνη με τα requests με τα ανανεωμένα στοιχεία.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 4: Το βιβλίο είναι ήδη διαθέσιμο προς ενοικίαση}
-\begin{enumerate}
-    \item[5.1] Το σύστημα βρίσκει ότι βιβλίο το οποίο ο χρήστης αναζητούσε υπάρχει ήδη διαθέσιμο προς ενοικίαση από άλλον χρήστη και 
-    \item[5.2] Το σύστημα εμφανίζει στον χρήστη την υπάρχουσα προσφορά με τα στοιχεία της και δυνατότητα ενοικίασης του, αν αυτός επιθυμεί.
+    \item[3.β.2] Το σύστημα εμφανίζει πεδία για την αλλαγή της τιμής ανά μέρα και του τρόπου συναλλαγής. 
+    \item[3.β.3] Ο χρήστης επιλέγει το στοιχείο που θέλει να αλλάξει και συμπληρώνει την καινούργια τιμή / τύπο συναλλαγής.  
+    \item[3.β.4] Ο χρήστης οριστικοποιεί.
+    \item[3.β.5] Το σύστημα καταγράφει τις αλλαγές.
+    \item[3.β.6] Συνεχίζεται η ροή από το βήμα 7 της βασικής ροής.
 \end{enumerate}
 
 \subsection{Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
@@ -308,11 +291,11 @@
 \subsubsection*{Βασική ροή <<Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής>>: Προσθήκη νέας αξιολόγησης με το προαιρετικό σχόλιο}
 \begin{enumerate}
     \item Από την οθόνη του ιστορικού συναλλαγών ο χρήστης επιλέγει μια συναλλαγή και διαλέγει να αξιολογήσει τον χρήστη με τον οποίο έκανε τη συναλλαγή. 
-    \item Το σύστημα εμφανίζει μια επιλογή για αξιολόγηση της μορφής 1-5 αστεριών, μαζί με προαιρετική προσθήκη σχολίου. 
+    \item Το σύστημα εμφανίζει μια επιλογή για αξιολόγηση της μορφής 1-5 αστεριών μαζί με προσθήκη σχολίου και μια επιλογή για απλή αξιολόγηση της μορφής 1-5 αστεριών. 
     \item Ο χρήστης επιλέγει να κάνει αξιολόγηση μόνο με βάση τα αστεράκια. 
     \item Το σύστημα εμφανίζει την επιλογή αξιολόγησης 1-5 (αστέρια). 
     \item Ο χρήστης κάνει την επιλογή του και επιβεβαιώνει.
-    \item Το σύστημα αποθηκεύει την αξιολόγηση και ενημερώνει τον χρήστη για την επιτυχία της ενέργειάς του.
+    \item Το σύστημα αποθηκεύει την αξιολόγηση.
     \item Το σύστημα επιστρέφει τον χρήστη στην οθόνη του ιστορικού.
 \end{enumerate}
 
@@ -320,7 +303,7 @@
 \begin{enumerate}
     \item[3.1] Ο χρήστης επιλέγει γραπτή αξιολόγηση μαζί με το προαιρετικό σχόλιο. 
     \item[3.2] Το σύστημα εμφανίζει επιλογή αξιολόγησης 1-5 (αστέρια), μαζί με ένα text field για το σχόλιο. 
-    \item[3.3] Ο χρήστης συμπληρώνει το σχόλιο και τα αστεράκια και επιβεβαιώνει
+    \item[3.3] Ο χρήστης συμπληρώνει το σχόλιο και τα αστεράκια και επιβεβαιώνει.
     \item[3.4] Επιστροφή στο βήμα 6 της βασικής ροής.
 \end{enumerate}
 
